# p1

./: .clang-format  CMakeLists.txt  README.md  build_linux.sh  build_linux_debug.sh  build_macos.sh  build_msys.sh  build_msys_debug.sh  clean.sh  command.c  command.h  json.c  json.h  main.c  math.c  math.h  real.json  test.json  today.json  util.c  util.h  www.c  www.h
.github/workflows/: clang-format.yml  cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml  cmake.yml
cmake/: CompilerWarnings.cmake
tests/: CMakeLists.txt  test_extract_data.c  test_extract_price.c  test_extract_price_data.c  test_read_file.c  test_read_file.json  test_read_json.c  test_string_to_double.c
